--- a/singolo1.css
+++ b/singolo1.css
@@ -124,6 +124,9 @@ body{
 }
 
 /* TOOLS */
+.services{
+    border-bottom: 5px solid #ffffff;
+}
 .services__wrapper{
     padding: 62px 40px 29px 40px;
     background-color: #f2f2f2;
