--- a/style.css
+++ b/style.css
@@ -111,8 +111,11 @@ p {
 }
 
 .header {
+  position: sticky;
+  top: 0;
+  z-index: 2;
   display: flex;
-  JUSTIFY-CONTENT: space-between;
+  justify-content: space-between;
   align-items: flex-end;
   text-transform: uppercase;
   background-color: #2d303a;
@@ -133,11 +136,7 @@ p {
 .navigator {
   display: flex;
   justify-content: space-between;
-  font-size: 12px;
-  letter-spacing: -0.2px;
   width: 371px;
-  color: white;
-  font-weight: bold;
 }
 .navigator li::before {
   content: "•";
@@ -148,57 +147,116 @@ p {
 .navigator li:first-child::before {
   content: none;
 }
-.navigator li:hover {
+.navigator li a:hover {
   color: #f06c64;
   cursor: pointer;
+}
+.navigator li a {
+  color: white;
+  font-size: 12px;
+  letter-spacing: -0.2px;
+  font-weight: bold;
 }
 .navigator .active {
   color: #f06c64;
 }
 
 .slider {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: #f06c64;
-  padding: 53px 40px 58px 42px;
-  border-bottom: 6px solid #ea676b;
+  position: relative;
 }
 .slider__button {
+  position: absolute;
+  top: 281px;
+  left: 42px;
   cursor: pointer;
   width: 16px;
   height: 27px;
   background-image: url(./assets/chev.svg);
+  z-index: 1;
 }
 .slider__button:hover {
   transform: scale(1.2);
 }
 .slider__button_right {
+  left: 964px;
   transform: rotate(180deg);
 }
 .slider__button_right:hover {
   transform: scale(1.2) rotate(180deg);
 }
+.slider .sliderShow {
+  display: none;
+}
 .slider__images {
   display: flex;
   align-items: center;
-  margin: 0 55px 0 54px;
+}
+.slider__images_1 {
+  background: #f06c64;
+  padding: 53px 0px 58px 112px;
+  border-bottom: 6px solid #ea676b;
+}
+.slider__images_2 {
+  justify-content: center;
+  position: relative;
+  background: #648BF0;
+  border-bottom: 6px solid #348bf0;
+  padding: 43px 0 38px 0;
 }
 .slider__images .phone {
   position: relative;
+}
+.slider__images .phone__touch {
+  position: absolute;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  box-sizing: border-box;
+}
+.slider__images .phone__touch_vertical {
+  top: 407px;
+  left: 85px;
+}
+.slider__images .phone__touch_horizontal {
+  top: 85px;
+  left: 7px;
+}
+.slider__images .phone__touch_green {
+  top: 433px;
+  left: 92px;
 }
 .slider__images .phone_vertical {
   background: url(./assets/phone01.svg);
   width: 240px;
   height: 483px;
 }
-.slider__images .phone_horisontal {
+.slider__images .phone_vertical_green {
+  background-size: cover;
+  width: 255px;
+  height: 513px;
+  z-index: 1;
+}
+.slider__images .phone_vertical_small {
+  position: absolute;
+  z-index: 0;
+  opacity: 0.5;
+  top: 67px;
+  left: 209px;
+  transform: scale(0.647);
+}
+.slider__images .phone_vertical_small_right {
+  left: 570px;
+}
+.slider__images .phone_horizontal {
   transform: scale(1);
   background: url(./assets/phone02.svg);
   width: 484px;
   height: 240px;
   margin-left: 73px;
   margin-top: -1px;
+}
+.slider__images .phone .hidden {
+  background-image: none;
 }
 .slider__images .phone__screen {
   position: absolute;
@@ -213,6 +271,14 @@ p {
   height: 333px;
   background-position: -14px -135px;
   background-image: url(./assets/phone/vertical.png);
+}
+.slider__images .phone__screen_vertical_green {
+  background-image: url(./assets/phone/verticalgreen.png);
+  top: 69px;
+  left: 14px;
+  width: 201px;
+  height: 354px;
+  background-position: 0 0;
 }
 .slider__images .phone__screen_horizontal {
   top: 14px;
@@ -382,18 +448,17 @@ p {
 .portfolio {
   background: #2d303a;
   border-bottom: 6px solid #323746;
+  padding: 68px 0px 60px 0px;
 }
 .portfolio__wrapper {
-  padding: 68px 40px 47px 40px;
+  padding: 0 40px;
 }
 
-.tags {
-  padding-bottom: 19px;
-}
 .tags__list {
   display: flex;
 }
 .tags__list li {
+  cursor: pointer;
   margin-right: 10px;
   padding: 4px 6px;
   border: 1px solid #666d89;
@@ -404,26 +469,44 @@ p {
   transition: all 0.3s;
 }
 .tags__list li:hover {
+  background-color: gainsboro;
+  border: 1px solid #2d303a;
+}
+.tags__list .active {
   color: #f06c64;
   border: 1px solid #2d303a;
 }
+.tags__list .active:hover {
+  background-color: #2d303a !important;
+  border: 1px solid #2d303a !important;
+}
 
 .works {
-  height: 621px;
+  height: 631px;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
   overflow: hidden;
+  padding: 19px 40px 6px 40px;
+}
+.works .hidden {
+  display: none;
+}
+.works .active {
+  box-shadow: 0 0 0 5px #F06C64;
 }
 .works__image {
   width: 220px;
   height: 187px;
   margin-bottom: 20px;
   cursor: pointer;
-  transition: all 0.3s ease-out;
+  transition: all 0.2s ease-out;
+}
+.works__image .tag {
+  visibility: hidden;
 }
 .works__image:hover {
-  opacity: 0.1;
+  transform: scale(0.9);
 }
 .works__image_1 {
   background-image: url(./assets/1.png);
@@ -579,12 +662,45 @@ p {
   font-weight: 400;
   text-align: center;
   cursor: pointer;
-  transition: all 0.3s ease-out;
+  transition: background-color 0.3s ease-out;
   margin-top: 16px;
 }
 .quote__form button:hover {
   background-color: #df4c45;
   color: white;
+}
+.quote__form .hidden {
+  visibility: hidden;
+}
+.quote__message {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: #000000ba;
+  z-index: 3;
+}
+.quote__message .message {
+  padding: 2%;
+  box-shadow: 0 0 13px 2px #00000021;
+  margin: 0 auto;
+  margin-top: 50vh;
+  width: 34vw;
+  background: #f2f2f2;
+}
+.quote__message .message h3 {
+  font-size: 22px;
+  color: #434a63;
+  padding: 0px 0px 26px 0px;
+}
+.quote__message .message p {
+  color: #666d89;
+  line-height: 16px;
+  font-weight: 700;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .footer {
