--- a/style.css
+++ b/style.css
@@ -72,6 +72,10 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: inherit;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Lato", sans-serif !important;
 }
@@ -110,10 +114,26 @@ p {
   text-align: justify;
 }
 
+@keyframes slideinLeft {
+  from {
+    left: 1020px;
+  }
+  to {
+    left: 0;
+  }
+}
+@keyframes slideinRight {
+  from {
+    left: -1020px;
+  }
+  to {
+    left: 0;
+  }
+}
 .header {
   position: sticky;
   top: 0;
-  z-index: 2;
+  z-index: 3;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
@@ -156,6 +176,7 @@ p {
   font-size: 12px;
   letter-spacing: -0.2px;
   font-weight: bold;
+  transition: color 0.3s ease-in-out;
 }
 .navigator .active {
   color: #f06c64;
@@ -163,6 +184,8 @@ p {
 
 .slider {
   position: relative;
+  scroll-margin-top: 95px;
+  overflow: hidden;
 }
 .slider__button {
   position: absolute;
@@ -172,7 +195,7 @@ p {
   width: 16px;
   height: 27px;
   background-image: url(./assets/chev.svg);
-  z-index: 1;
+  z-index: 2;
 }
 .slider__button:hover {
   transform: scale(1.2);
@@ -184,16 +207,27 @@ p {
 .slider__button_right:hover {
   transform: scale(1.2) rotate(180deg);
 }
-.slider .sliderShow {
-  display: none;
+.slider .active {
+  z-index: 1;
+}
+.slider .sliderShowLeft {
+  z-index: 1;
+  animation-duration: 0.8s;
+  animation-name: slideinLeft;
+}
+.slider .sliderShowRight {
+  z-index: 1;
+  animation-duration: 0.8s;
+  animation-name: slideinRight;
 }
 .slider__images {
+  position: absolute;
   display: flex;
   align-items: center;
 }
 .slider__images_1 {
   background: #f06c64;
-  padding: 53px 0px 58px 112px;
+  padding: 53px 111px 58px 112px;
   border-bottom: 6px solid #ea676b;
 }
 .slider__images_2 {
@@ -201,7 +235,7 @@ p {
   position: relative;
   background: #648BF0;
   border-bottom: 6px solid #348bf0;
-  padding: 43px 0 38px 0;
+  padding: 43px 382px 38px 383px;
 }
 .slider__images .phone {
   position: relative;
@@ -234,7 +268,6 @@ p {
   background-size: cover;
   width: 255px;
   height: 513px;
-  z-index: 1;
 }
 .slider__images .phone_vertical_small {
   position: absolute;
@@ -291,6 +324,7 @@ p {
 
 .services {
   border-bottom: 6px solid #ffffff;
+  scroll-margin-top: 95px;
 }
 .services__wrapper {
   padding: 68px 40px 29px 40px;
@@ -373,6 +407,7 @@ p {
 .about {
   background: #f2f2f2;
   border-bottom: 6px solid #ffffff;
+  scroll-margin-top: 95px;
 }
 .about__wrapper {
   padding: 68px 40px 67px 40px;
@@ -449,6 +484,7 @@ p {
   background: #2d303a;
   border-bottom: 6px solid #323746;
   padding: 68px 0px 60px 0px;
+  scroll-margin-top: 95px;
 }
 .portfolio__wrapper {
   padding: 0 40px;
@@ -468,17 +504,9 @@ p {
   border-radius: 6px;
   transition: all 0.3s;
 }
-.tags__list li:hover {
-  background-color: gainsboro;
-  border: 1px solid #2d303a;
-}
 .tags__list .active {
   color: #f06c64;
   border: 1px solid #2d303a;
-}
-.tags__list .active:hover {
-  background-color: #2d303a !important;
-  border: 1px solid #2d303a !important;
 }
 
 .works {
@@ -561,6 +589,7 @@ p {
   background: #f06c64;
   padding: 68px 40px 65px 40px;
   border-bottom: 6px solid #ea676b;
+  scroll-margin-top: 95px;
 }
 .quote h2, .quote p {
   color: #f0d8d9;
