--- a/style.css
+++ b/style.css
@@ -183,8 +183,10 @@ p {
 }
 
 .slider {
-  position: relative;
   scroll-margin-top: 95px;
+}
+.slider__wrapper {
+  position: relative;
   overflow: hidden;
 }
 .slider__button {
