--- a/style.css
+++ b/style.css
@@ -84,6 +84,16 @@ body {
   width: 1020px;
   margin: 0 auto;
 }
+@media (max-width: 1020px) {
+  .wrapper {
+    width: 100vw;
+  }
+}
+@media (max-width: 375px) {
+  .wrapper {
+    width: 375px;
+  }
+}
 
 h2 {
   font-size: 30px;
@@ -142,6 +152,13 @@ p {
   border-bottom: 6px solid #323645;
   padding: 31px 40px 33px 40px;
 }
+@media (max-width: 768px) {
+  .header {
+    justify-content: center;
+    border: none;
+    padding: 23px 0 23px 0;
+  }
+}
 .header .logo {
   text-decoration: none;
   font-size: 25px;
@@ -157,6 +174,11 @@ p {
   display: flex;
   justify-content: space-between;
   width: 371px;
+}
+@media (max-width: 768px) {
+  .navigator {
+    display: none;
+  }
 }
 .navigator li::before {
   content: "•";
@@ -199,12 +221,23 @@ p {
   background-image: url(./assets/chev.svg);
   z-index: 2;
 }
+@media (max-width: 1020px) {
+  .slider__button {
+    top: 50%;
+    left: 5%;
+  }
+}
 .slider__button:hover {
   transform: scale(1.2);
 }
 .slider__button_right {
   left: 964px;
   transform: rotate(180deg);
+}
+@media (max-width: 1020px) {
+  .slider__button_right {
+    left: 95%;
+  }
 }
 .slider__button_right:hover {
   transform: scale(1.2) rotate(180deg);
@@ -225,19 +258,42 @@ p {
 .slider__images {
   position: absolute;
   display: flex;
-  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 600px;
+}
+@media (max-width: 1020px) {
+  .slider__images {
+    height: 451.76px;
+  }
+}
+@media (max-width: 768px) {
+  .slider__images {
+    height: 220.59px;
+  }
 }
 .slider__images_1 {
   background: #f06c64;
-  padding: 53px 111px 58px 112px;
   border-bottom: 6px solid #ea676b;
 }
 .slider__images_2 {
-  justify-content: center;
   position: relative;
   background: #648BF0;
   border-bottom: 6px solid #348bf0;
-  padding: 43px 382px 38px 383px;
+}
+.slider__images .phones {
+  display: flex;
+  align-items: center;
+}
+@media (max-width: 1020px) {
+  .slider__images .phones {
+    transform: scale(0.75);
+  }
+}
+@media (max-width: 768px) {
+  .slider__images .phones {
+    transform: scale(0.37);
+  }
 }
 .slider__images .phone {
   position: relative;
@@ -272,18 +328,16 @@ p {
   height: 513px;
 }
 .slider__images .phone_vertical_small {
-  position: absolute;
   z-index: 0;
   opacity: 0.5;
-  top: 67px;
-  left: 209px;
   transform: scale(0.647);
+  margin-right: -67px;
 }
 .slider__images .phone_vertical_small_right {
-  left: 570px;
+  margin-right: 0;
+  margin-left: -68px;
 }
 .slider__images .phone_horizontal {
-  transform: scale(1);
   background: url(./assets/phone02.svg);
   width: 484px;
   height: 240px;
@@ -334,6 +388,16 @@ p {
   color: #666d89;
   line-height: 30px;
 }
+@media (max-width: 1020px) {
+  .services__wrapper {
+    padding: 48px 40px 25px 40px;
+  }
+}
+@media (max-width: 768px) {
+  .services__wrapper {
+    padding: 33px 43px 0px 32px;
+  }
+}
 .services h2 {
   letter-spacing: -0.18px;
 }
@@ -350,11 +414,22 @@ p {
   justify-content: space-between;
   margin: 0 1px;
 }
-
 .tool {
   height: 90px;
   display: flex;
   margin-bottom: 33px;
+}
+@media (max-width: 1020px) {
+  .tool {
+    margin-bottom: 56px;
+    flex-basis: 50%;
+  }
+}
+@media (max-width: 768px) {
+  .tool {
+    margin-bottom: 32px;
+    flex-basis: 51%;
+  }
 }
 .tool__icon {
   width: 59px;
@@ -411,20 +486,56 @@ p {
   border-bottom: 6px solid #ffffff;
   scroll-margin-top: 95px;
 }
+@media (max-width: 768px) {
+  .about {
+    border: none;
+  }
+}
 .about__wrapper {
   padding: 68px 40px 67px 40px;
 }
+@media (max-width: 768px) {
+  .about__wrapper {
+    padding: 42px 30px 11px 30px;
+  }
+}
 .about__wrapper p {
   color: #767e9e;
+}
+@media (max-width: 768px) {
+  .about__wrapper p {
+    text-align: left;
+  }
 }
 .about__resumes {
   padding: 34px 0 0 0;
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 768px) {
+  .about__resumes {
+    flex-wrap: wrap;
+  }
+}
 
 .resume__layout {
   width: 302px;
+}
+@media (max-width: 1020px) {
+  .resume__layout {
+    width: 32%;
+    margin-right: 2%;
+  }
+  .resume__layout:nth-child(3n) {
+    margin-right: 0;
+  }
+}
+@media (max-width: 768px) {
+  .resume__layout {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 34px;
+  }
 }
 .resume__layout p {
   font-size: 12px;
@@ -434,24 +545,42 @@ p {
 }
 .resume__image {
   width: 300px;
+  background-size: cover;
   height: 300px;
   cursor: pointer;
   transition: all 0.3s ease-out;
+}
+@media (max-width: 1020px) {
+  .resume__image {
+    width: 100%;
+    height: 28vw;
+  }
+}
+@media (max-width: 768px) {
+  .resume__image {
+    height: 314px;
+    background-size: cover;
+  }
 }
 .resume__image:hover {
   opacity: 0.1;
 }
 .resume__image_1 {
-  background: url(././assets/avatar1.png);
+  background-image: url(././assets/avatar1.png);
 }
 .resume__image_2 {
-  background: url(././assets/avatar2.png);
+  background-image: url(././assets/avatar2.png);
 }
 .resume__image_3 {
-  background: url(././assets/avatar3.png);
+  background-image: url(././assets/avatar3.png);
 }
 .resume__link {
   padding: 11px 0 0 0;
+}
+@media (max-width: 768px) {
+  .resume__link {
+    padding: 7px 0 0 0;
+  }
 }
 
 .social {
@@ -488,8 +617,24 @@ p {
   padding: 68px 0px 60px 0px;
   scroll-margin-top: 95px;
 }
+@media (max-width: 768px) {
+  .portfolio {
+    padding: 47px 0 28px 0;
+    border: none;
+  }
+}
 .portfolio__wrapper {
   padding: 0 40px;
+}
+@media (max-width: 768px) {
+  .portfolio__wrapper {
+    padding: 0 30px;
+  }
+}
+@media (max-width: 768px) {
+  .portfolio p {
+    padding-bottom: 24px;
+  }
 }
 
 .tags__list {
@@ -512,12 +657,16 @@ p {
 }
 
 .works {
-  height: 631px;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
   overflow: hidden;
   padding: 19px 40px 6px 40px;
+}
+@media (max-width: 768px) {
+  .works {
+    padding: 25px 30px 0px 30px;
+  }
 }
 .works .hidden {
   display: none;
@@ -531,6 +680,33 @@ p {
   margin-bottom: 20px;
   cursor: pointer;
   transition: all 0.2s ease-out;
+}
+@media (max-width: 1020px) {
+  .works__image {
+    min-width: 216.16px;
+    min-height: 183.76px;
+    height: auto;
+    height: calc(0.8*width);
+    margin-right: 19.65px;
+    margin-bottom: 19.65px;
+    flex-basis: calc((100% - 2*19.65px)/3);
+  }
+  .works__image:nth-child(3n) {
+    margin-right: 0;
+  }
+}
+@media (max-width: 768px) {
+  .works__image {
+    min-width: 151px;
+    min-height: 128px;
+    height: auto;
+    margin-right: 13px;
+    margin-bottom: 14px;
+    flex-basis: calc((100% - 13px)/2);
+  }
+  .works__image:nth-child(2n) {
+    margin-right: 0;
+  }
 }
 .works__image .tag {
   visibility: hidden;
@@ -586,23 +762,53 @@ p {
   background-image: url(./assets/12.png);
   background-position: -36px -60px;
 }
+@media (max-width: 768px) {
+  .works__image:nth-child(1n+9) {
+    display: none;
+  }
+}
+.works__image:nth-child(1n+13) {
+  display: none;
+}
 
 .quote {
   background: #f06c64;
-  padding: 68px 40px 65px 40px;
+  padding: 68px 40px 58px 40px;
   border-bottom: 6px solid #ea676b;
   scroll-margin-top: 95px;
 }
 .quote h2, .quote p {
   color: #f0d8d9;
 }
+@media (max-width: 768px) {
+  .quote h2, .quote p {
+    text-align: left;
+  }
+}
+@media (max-width: 768px) {
+  .quote {
+    padding: 48px 30px 45px 30px;
+    border-bottom: none;
+  }
+}
 .quote__container {
   display: flex;
   margin-top: 33px;
   justify-content: space-between;
 }
+@media (max-width: 768px) {
+  .quote__container {
+    flex-direction: column;
+    margin-top: 20px;
+  }
+}
 .quote__container .contact {
   width: 300px;
+}
+@media (max-width: 768px) {
+  .quote__container .contact {
+    width: 100%;
+  }
 }
 .quote__container .contact h3 {
   color: #f0d8d9;
@@ -614,6 +820,7 @@ p {
   line-height: 22px;
   font-weight: 400;
   letter-spacing: -0.2px;
+  text-align: justify;
 }
 .quote__container .contact a {
   font-size: 12px;
@@ -642,6 +849,18 @@ p {
 }
 .quote__form {
   width: 619px;
+}
+@media (max-width: 1020px) {
+  .quote__form {
+    width: 83%;
+    margin-right: 4%;
+  }
+}
+@media (max-width: 768px) {
+  .quote__form {
+    width: 100%;
+    margin-bottom: 32px;
+  }
 }
 .quote__form .input {
   background-color: #d6564f;
@@ -682,23 +901,30 @@ p {
   box-shadow: 0 0 0 1px #f0d8d9;
 }
 .quote__form button {
-  width: 100%;
-  height: 36px;
-  background-color: #d6564f;
+  width: 136px;
+  height: 38px;
+  background-color: #FBC65F;
+  text-transform: uppercase;
   border: 0;
   border-radius: 5px;
-  font-size: 16px;
-  line-height: 22px;
-  color: #f48c8f;
-  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #886A30;
+  font-weight: bold;
   text-align: center;
   cursor: pointer;
   transition: background-color 0.3s ease-out;
-  margin-top: 16px;
+  margin-top: 14px;
 }
 .quote__form button:hover {
   background-color: #df4c45;
   color: white;
+}
+@media (max-width: 768px) {
+  .quote__form button {
+    width: 100%;
+    height: 50px;
+  }
 }
 .quote__form .hidden {
   visibility: hidden;
@@ -746,9 +972,19 @@ p {
 .footer__copyright p:hover {
   color: white;
 }
+@media (max-width: 768px) {
+  .footer__copyright p {
+    display: none;
+  }
+}
 .footer__layout {
   display: flex;
   justify-content: space-between;
+}
+@media (max-width: 768px) {
+  .footer__layout {
+    justify-content: center;
+  }
 }
 
 .social {
