--- a/style.css
+++ b/style.css
@@ -84,14 +84,14 @@ body {
   width: 1020px;
   margin: 0 auto;
 }
-@media (max-width: 1020px) {
+@media (max-width: 1019px) {
   .wrapper {
     width: 100vw;
   }
 }
-@media (max-width: 375px) {
+@media (max-width: 320px) {
   .wrapper {
-    width: 375px;
+    width: 320px;
   }
 }
 
@@ -152,12 +152,19 @@ p {
   border-bottom: 6px solid #323645;
   padding: 31px 40px 33px 40px;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .header {
     justify-content: center;
     border: none;
+    min-height: 71px;
     padding: 23px 0 23px 0;
   }
+}
+.header__logo_active {
+  z-index: 1;
+  position: fixed;
+  left: 71px;
+  top: 24px;
 }
 .header .logo {
   text-decoration: none;
@@ -179,7 +186,7 @@ p {
   width: 25px;
   height: 20px;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .hamburger {
     display: inline-block;
   }
@@ -206,13 +213,13 @@ p {
   transform: rotate(90deg);
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .header__navigation {
     visibility: hidden;
     position: fixed;
     top: 0;
     left: 0;
-    height: 100vh;
+    height: 100%;
     width: 278px;
     box-shadow: 0px -40px 20px rgba(0, 0, 0, 0.4);
     background: #2d303a;
@@ -226,7 +233,7 @@ p {
   justify-content: space-between;
   width: 371px;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .header__navigation .navigator {
     flex-direction: column;
     width: auto;
@@ -239,7 +246,7 @@ p {
   font-weight: 100;
   margin-right: 10px;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .header__navigation .navigator li::before {
     content: none;
   }
@@ -260,7 +267,7 @@ p {
   font-weight: bold;
   transition: color 0.3s ease-in-out;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .header__navigation .navigator li a {
     display: block;
     font-size: 24px;
@@ -275,7 +282,7 @@ p {
 .slider {
   scroll-margin-top: 95px;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .slider {
     scroll-margin-top: 71px;
   }
@@ -287,29 +294,54 @@ p {
 .slider__button {
   position: absolute;
   top: 281px;
-  left: 42px;
   cursor: pointer;
   width: 16px;
   height: 27px;
   background-image: url(./assets/chev.svg);
+  background-size: cover;
   z-index: 2;
 }
-@media (max-width: 1020px) {
+@media (max-width: 1019px) {
   .slider__button {
-    top: 50%;
-    left: 5%;
+    top: 211.88px;
+    height: 28.31px;
+  }
+}
+@media (max-width: 767px) {
+  .slider__button {
+    top: 98.45px;
+    width: 14.08px;
+    height: 24.9px;
   }
 }
 .slider__button:hover {
   transform: scale(1.2);
 }
+.slider__button_left {
+  left: 42px;
+}
+@media (max-width: 1019px) {
+  .slider__button_left {
+    left: 29.42px;
+  }
+}
+@media (max-width: 767px) {
+  .slider__button_left {
+    left: 10.25px;
+  }
+}
 .slider__button_right {
-  left: 964px;
+  right: 40px;
   transform: rotate(180deg);
 }
-@media (max-width: 1020px) {
+@media (max-width: 1019px) {
   .slider__button_right {
-    left: 95%;
+    right: 26.86px;
+  }
+}
+@media (max-width: 767px) {
+  .slider__button_right {
+    right: 9.64px;
   }
 }
 .slider__button_right:hover {
@@ -335,12 +367,12 @@ p {
   width: 100%;
   height: 600px;
 }
-@media (max-width: 1020px) {
+@media (max-width: 1019px) {
   .slider__images {
     height: 451.76px;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .slider__images {
     height: 220.59px;
   }
@@ -349,23 +381,48 @@ p {
   background: #f06c64;
   border-bottom: 6px solid #ea676b;
 }
+@media (max-width: 1019px) {
+  .slider__images_1 {
+    border-bottom: 4.52px solid #ea676b;
+  }
+}
+@media (max-width: 767px) {
+  .slider__images_1 {
+    border-bottom: 2.21px solid #ea676b;
+  }
+}
 .slider__images_2 {
   position: relative;
   background: #648BF0;
   border-bottom: 6px solid #348bf0;
 }
+@media (max-width: 1019px) {
+  .slider__images_2 {
+    border-bottom: 4.52px solid #348bf0;
+  }
+}
+@media (max-width: 767px) {
+  .slider__images_2 {
+    border-bottom: 2.21px solid #348bf0;
+  }
+}
 .slider__images .phones {
   display: flex;
   align-items: center;
 }
-@media (max-width: 1020px) {
+@media (max-width: 1019px) {
   .slider__images .phones {
     transform: scale(0.75);
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .slider__images .phones {
     transform: scale(0.37);
+  }
+}
+@media (max-width: 374px) {
+  .slider__images .phones {
+    transform: scale(0.3);
   }
 }
 .slider__images .phone {
@@ -453,11 +510,12 @@ p {
 
 .services {
   border-bottom: 6px solid #ffffff;
-  scroll-margin-top: 93px;
+  scroll-margin-top: 95px;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .services {
     scroll-margin-top: 70px;
+    border: none;
   }
 }
 .services__wrapper {
@@ -466,12 +524,12 @@ p {
   color: #666d89;
   line-height: 30px;
 }
-@media (max-width: 1020px) {
+@media (max-width: 1019px) {
   .services__wrapper {
     padding: 48px 40px 25px 40px;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .services__wrapper {
     padding: 33px 43px 0px 32px;
   }
@@ -497,13 +555,13 @@ p {
   display: flex;
   margin-bottom: 33px;
 }
-@media (max-width: 1020px) {
+@media (max-width: 1019px) {
   .tool {
     margin-bottom: 56px;
-    flex-basis: 50%;
+    flex-basis: 48%;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .tool {
     margin-bottom: 32px;
     flex-basis: 51%;
@@ -544,6 +602,11 @@ p {
   width: 220px;
   overflow-y: hidden;
 }
+@media (max-width: 374px) {
+  .tool__description {
+    width: 180px;
+  }
+}
 .tool__description h4 {
   font-size: 18px;
   line-height: 16px;
@@ -564,7 +627,7 @@ p {
   border-bottom: 6px solid #ffffff;
   scroll-margin-top: 95px;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .about {
     border: none;
     scroll-margin-top: 70px;
@@ -573,7 +636,7 @@ p {
 .about__wrapper {
   padding: 68px 40px 67px 40px;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .about__wrapper {
     padding: 42px 30px 11px 30px;
   }
@@ -581,7 +644,7 @@ p {
 .about__wrapper p {
   color: #767e9e;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .about__wrapper p {
     text-align: left;
   }
@@ -591,7 +654,7 @@ p {
   display: flex;
   justify-content: space-between;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .about__resumes {
     flex-wrap: wrap;
   }
@@ -600,7 +663,7 @@ p {
 .resume__layout {
   width: 302px;
 }
-@media (max-width: 1020px) {
+@media (max-width: 1019px) {
   .resume__layout {
     width: 32%;
     margin-right: 2%;
@@ -609,7 +672,7 @@ p {
     margin-right: 0;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .resume__layout {
     width: 100%;
     margin-right: 0;
@@ -629,13 +692,13 @@ p {
   cursor: pointer;
   transition: all 0.3s ease-out;
 }
-@media (max-width: 1020px) {
+@media (max-width: 1019px) {
   .resume__image {
     width: 100%;
     height: 28vw;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .resume__image {
     height: 314px;
     background-size: cover;
@@ -656,7 +719,7 @@ p {
 .resume__link {
   padding: 11px 0 0 0;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .resume__link {
     padding: 7px 0 0 0;
   }
@@ -696,7 +759,7 @@ p {
   padding: 68px 0px 60px 0px;
   scroll-margin-top: 95px;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .portfolio {
     padding: 47px 0 28px 0;
     border: none;
@@ -706,12 +769,12 @@ p {
 .portfolio__wrapper {
   padding: 0 40px;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .portfolio__wrapper {
     padding: 0 30px;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .portfolio p {
     padding-bottom: 24px;
   }
@@ -743,7 +806,7 @@ p {
   overflow: hidden;
   padding: 19px 40px 6px 40px;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .works {
     padding: 25px 30px 0px 30px;
   }
@@ -761,7 +824,7 @@ p {
   cursor: pointer;
   transition: all 0.2s ease-out;
 }
-@media (max-width: 1020px) {
+@media (max-width: 1019px) {
   .works__image {
     min-width: 216.16px;
     min-height: 183.76px;
@@ -775,7 +838,7 @@ p {
     margin-right: 0;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .works__image {
     min-width: 151px;
     min-height: 128px;
@@ -786,6 +849,12 @@ p {
   }
   .works__image:nth-child(2n) {
     margin-right: 0;
+  }
+}
+@media (max-width: 374px) {
+  .works__image {
+    min-width: 123px;
+    min-height: 107px;
   }
 }
 .works__image .tag {
@@ -842,7 +911,7 @@ p {
   background-image: url(./assets/12.png);
   background-position: -36px -60px;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .works__image:nth-child(1n+9) {
     display: none;
   }
@@ -860,12 +929,12 @@ p {
 .quote h2, .quote p {
   color: #f0d8d9;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .quote h2, .quote p {
     text-align: left;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .quote {
     padding: 48px 30px 45px 30px;
     border-bottom: none;
@@ -877,7 +946,7 @@ p {
   margin-top: 33px;
   justify-content: space-between;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .quote__container {
     flex-direction: column;
     margin-top: 20px;
@@ -886,7 +955,7 @@ p {
 .quote__container .contact {
   width: 300px;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .quote__container .contact {
     width: 100%;
   }
@@ -931,13 +1000,13 @@ p {
 .quote__form {
   width: 619px;
 }
-@media (max-width: 1020px) {
+@media (max-width: 1019px) {
   .quote__form {
     width: 83%;
     margin-right: 4%;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .quote__form {
     width: 100%;
     margin-bottom: 32px;
@@ -1001,7 +1070,7 @@ p {
   background-color: #df4c45;
   color: white;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .quote__form button {
     width: 100%;
     height: 50px;
@@ -1014,8 +1083,8 @@ p {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background: #000000ba;
   z-index: 3;
 }
@@ -1023,9 +1092,13 @@ p {
   padding: 2%;
   box-shadow: 0 0 13px 2px #00000021;
   margin: 0 auto;
-  margin-top: 50vh;
+  margin-top: 30vh;
+  min-width: 280px;
   width: 34vw;
   background: #f2f2f2;
+}
+.quote__message .message button {
+  width: 100%;
 }
 .quote__message .message h3 {
   font-size: 22px;
@@ -1053,7 +1126,7 @@ p {
 .footer__copyright p:hover {
   color: white;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .footer__copyright p {
     display: none;
   }
@@ -1062,7 +1135,7 @@ p {
   display: flex;
   justify-content: space-between;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .footer__layout {
     justify-content: center;
   }
